--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Deploy to GitHub Releases
         uses: AButler/upload-release-assets@v2.0.2
         with:
-          files: "TF100.smx;TF100.txt;whitelist.txt"
+          files: "TF100.smx;tf2.100.txt;whitelist.txt"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
