--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           spcomp -i addons/sourcemod/include TF100.sp
 
-      - name: Prepare files
+      - name: Prepare Files
         run: |
           mkdir addons/sourcemod/scripting
           mv TF100.smx addons/sourcemod/scripting
