--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: SourcePawn CI
+
 on: [push]
 
 jobs:
@@ -16,12 +17,5 @@ jobs:
         shell: bash
         run: mkdir -p addons/sourcemod/include
 
-      - name: Install SourceScramble
-        uses: KatsuteTF/Workflows/actions/curl@main
-        with:
-          url: https://raw.githubusercontent.com/nosoop/SMExt-SourceScramble/master/scripting/include/sourcescramble.inc
-          file: addons/sourcemod/include/sourcescramble.inc
-
       - name: Compile Plugin
-        run: |
-          spcomp -i addons/sourcemod/include TF100.sp
+        run: spcomp -i addons/sourcemod/include TF100.sp
