--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,8 @@ jobs:
         run: |-
           mkdir addons/sourcemod/scripting
           mv TF100.smx addons/sourcemod/scripting
-          mkdir addons/sourcemod/gamedata
-          mv tf2.100.txt addons/sourcemod/gamedata
+        #  mkdir addons/sourcemod/gamedata
+        #  mv tf2.100.txt addons/sourcemod/gamedata
 
       - name: Deploy to GitHub Releases
         uses: AButler/upload-release-assets@v2.0.2
